# SQL_postgresql

Banks/: SQL_select  export_01052025_utf8.csv  export_01062025_utf8.csv  export_01072025_utf8.csv  export_02042025_utf8.csv  export_02052025_utf8.csv  export_02062025_utf8.csv  export_02072025_utf8.csv  export_03042025_utf8.csv  export_03052025_utf8.csv  export_03062025_utf8.csv  export_03072025_utf8.csv  export_04042025_utf8.csv  export_04062025_utf8.csv  export_04072025_utf8.csv  export_05052025_utf8.csv  export_05062025_utf8.csv  export_06052025_utf8.csv  export_06062025_utf8.csv  export_07042025_utf8.csv  export_07052025_utf8.csv  export_08042025_utf8.csv  export_08052025_utf8.csv  export_09042025_utf8.csv  export_09052025_utf8.csv  export_09062025_utf8.csv  export_10032025_utf8.csv  export_10042025_utf8.csv  export_10062025_utf8.csv  export_11032025_utf8.csv  export_11042025_utf8.csv  export_11062025_utf8.csv  export_12032025_utf8.csv  export_12052025_utf8.csv  export_12062025_utf8.csv  (+57 more)
Cost_accounting/acc_programm/: CMakeLists.txt  categories.csv  classified_payments_new_matcher.xlsx  classified_payments_result.xlsx  release.sh
Cost_accounting/acc_programm/include/: CategoryClassifier.h  CategoryMatcher.h  Database.h  ICategoryClassifier.h  PaymentClassifier.h
Cost_accounting/acc_programm/src/: CategoryClassifier.cpp  CategoryMatcher.cpp  Database.cpp  PaymentClassifier.cpp  main.cpp
Intelligent_Sales/utsk_intelligent_sales/: CMakeLists.txt
Intelligent_Sales/utsk_intelligent_sales/include/core/: Config.hpp  Logger.hpp
Intelligent_Sales/utsk_intelligent_sales/include/models/: Recommendation.hpp
Intelligent_Sales/utsk_intelligent_sales/include/services/: RecommendationService.hpp
Intelligent_Sales/utsk_intelligent_sales/include/ui/: ConsoleUI.hpp
Intelligent_Sales/utsk_intelligent_sales/src/: main_console.cpp
Intelligent_Sales/utsk_intelligent_sales/src/core/: Config.cpp  Database.cpp  Logger.cpp
Intelligent_Sales/utsk_intelligent_sales/src/models/: Recommendation.cpp
Intelligent_Sales/utsk_intelligent_sales/src/services/: ClientService.cpp  RecommendationService.cpp
Intelligent_Sales/utsk_intelligent_sales/src/ui/: ConsoleMenu.cpp  ConsoleUI.cpp  TablePrinter.cpp
cod_Mig_Val/: CMakeLists.txt  DOC Document.docx  main.cpp
cod_Mig_Val/include/: GroupReport.h  Logger.h  StatisticsService.h
cod_Mig_Val/logs/: log_2025-07-02.txt  log_2025-08-12.txt  log_2025-08-25.txt
cod_Mig_Val/reports/: statistics_report_2025-07-03_11-48-19.xlsx  statistics_report_2025-07-03_12-32-41.xlsx  Анализ 2025_1-6.xlsx  Анализ_146_1-6.xlsx  Анлиз_2025_1-5.xlsx  Анлиз_2025_1-5_месяц.xlsx
cod_Mig_Val/src/: ClientActivity.cpp  Database.cpp  Logger.cpp  group.cpp  year.cpp
cod_Mig_Val/template/: template.xlsx  template_empty.xlsx
cod_Mig_Val/test/: database_test.cpp
cod_Mig_Val/version/: bump_version.sh  version.hpp
cod_Migration/: CMakeLists.txt  ClientUnit.cpp  ClientUnit.h  Database.h  debug.sh  diagram  main  main.cpp  main_v1.0.0  main_v1.0.0-15-g9c6a826  main_v1.0.0-2-g1474ffb  main_v1.0.0-28-ga5b2450  main_v1.0.0-29-g1e0bb0e  main_v1.0.0-3-gbded04a  main_v1.0.0-30-g0bc850a  main_v1.0.0-33-g4de5c15  main_v1.0.0-35-g5daac7a  main_v1.0.0-36-g3c3e83f  main_v1.0.0-40-g509b357  main_v1.0.0-42-g10438c9  main_v1.0.0-7-g5983844  main_v1.0.0-8-g099b7e0  release.sh
cod_Migration/.github/workflows/: bump_version.yml
cod_Migration/include/: ClientActivity.h  ClientStatistics.h  DatabaseProcedure.h  DatabaseProcedureHandler.h  ExcelExporter.h  group.h  year.h
cod_Migration/libxl/doc/: richString.html
cod_Migration/logs/: log_2025-05-29.txt  log_2025-05-30.txt  log_2025-06-02.txt  log_2025-06-03.txt  log_2025-06-04.txt  log_2025-06-20.txt  log_2025-07-01.txt  log_2025-07-03.txt  log_2025-08-25.txt  log_2025-08-26.txt  log_2025-08-29.txt  log_2025-09-01.txt  log_2025-10-01.txt  log_2025-10-02.txt  log_2025-10-03.txt  log_2025-10-06.txt  log_2025-10-31.txt  log_2025-12-01.txt  log_2026-01-05.txt
cod_Migration/reports/: group_report_2025-08-26_11-42-38.xlsx  group_report_2025-10-03_12-54-21.xlsx  group_report_2025-10-06_13-06-44.xlsx  group_report_2025-10-06_13-16-26.xlsx  group_report_2025-10-31_19-19-26.xlsx  group_report_2025-12-01_12-01-53.xlsx  group_report_2026-01-05_17-23-16.xlsx  statistics_report_2025-05-29_11-49-31.xlsx  statistics_report_2025-05-30_10-18-49.xlsx  statistics_report_2025-05-30_14-00-34.xlsx  statistics_report_2025-05-30_14-24-53.xlsx  statistics_report_2025-05-30_14-30-29.xlsx  statistics_report_2025-05-30_14-41-10.xlsx  statistics_report_2025-05-30_14-45-47.xlsx  statistics_report_2025-05-30_14-55-55.xlsx  statistics_report_2025-06-02_14-20-50.xlsx  statistics_report_2025-06-02_14-29-06.xlsx  statistics_report_2025-06-02_14-31-23.xlsx  statistics_report_2025-06-02_15-29-39.xlsx  statistics_report_2025-06-02_15-31-11.xlsx  statistics_report_2025-06-02_15-40-39.xlsx  statistics_report_2025-06-02_15-56-42.xlsx  statistics_report_2025-06-02_15-58-35.xlsx  statistics_report_2025-06-02_16-01-25.xlsx  statistics_report_2025-06-02_16-50-29.xlsx  statistics_report_2025-06-02_16-51-43.xlsx  statistics_report_2025-06-04_09-43-58.xlsx  statistics_report_2025-06-20_11-58-44.xlsx  statistics_report_2025-06-20_11-58-50.xlsx  statistics_report_2025-06-20_11-58-56.xlsx  statistics_report_2025-06-20_11-59-01.xlsx  statistics_report_2025-06-20_11-59-07.xlsx  statistics_report_2025-06-20_12-34-24.xlsx  statistics_report_2025-06-20_12-55-58.xlsx  statistics_report_2025-07-03_10-00-58.xlsx  statistics_report_2025-08-25_11-09-00.xlsx  statistics_report_2025-08-26_09-30-25.xlsx  statistics_report_2025-08-26_09-51-57.xlsx  statistics_report_2025-08-26_10-28-58.xlsx  statistics_report_2025-08-26_11-36-28.xlsx  (+9 more)
cod_Migration/src/: ClientStatistics.cpp  DatabaseProcedure.cpp  DatabaseProcedureHandler.cpp  ExcelExporter.cpp  StatisticsService.cpp
cod_Migration/template/: .~tamplate.xlsx  tamplate.xlsx  tamplate_empty.xlsx  template_empty.xlsx  template_empty_val_1.xlsx
cod_Migration/test/: CMakeLists.txt
cod_Migration/version/: generate_version.sh  version.hpp
(+82 files in other folders)
